Update Homepage “testimonials”

--- a/themes/carpal-tunnel/data/testimonials.yml
+++ b/themes/carpal-tunnel/data/testimonials.yml
@@ -5,16 +5,16 @@ review:
     image: ''
     name: Kate Washington
     text: >-
-      I am extremely meticulous and it is rare for me to be satisfied with
-      service or results. Dr. Green is a very meticulous doctor and you can tell
-      he honestly cares about his patients' outcomes. He did an excellent job on
-      my carpal tunnel surgery and even talked me out of a different additional
-      expensive cosmetic procedure I wanted because he thought I would not be a
-      good candidate. Good results and good doctor.
+      Dr. Green is a very meticulous doctor and you can tell he honestly cares
+      about his patients' outcomes. He did an excellent job on my carpal tunnel
+      surgery and even talked me out of a different additional expensive
+      cosmetic procedure I wanted because he thought I would not be a good
+      candidate. Good results and good doctor.
   - company: ''
     image: ''
     name: Eloise Cannon
     text: >-
-      Amazing doctor, wonderful human being. If there were more people like him
-      trustworthy, honest, sympathetic, empathetic. I can't say enough! He
-      literally changed my life. Helped me in so many ways, thank you!
+      Amazing doctor and wonderful human being. If only there were more people
+      like him - trustworthy, honest, sympathetic, empathetic... I can't say
+      enough! He literally changed my life. Helped me in so many ways, thank
+      you!
