Update Team “team_members”

--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -32,7 +32,7 @@ member:
     text: ' Ms. Karen Bird is an Occupational Therapy Specialist who graduated with honors from Western Michigan University in 1979 and John Carroll University in 1989. She has been practicing occupational therapy for over 40 years in various positions, among them staff therapist at St. Vincent Charity Hospital and Health Center in Cleveland, OH. Ms. Bird works with Carpal Tunnel patients at the Carpal Tunnel Center’s Cleveland office to help our patients in their recovery after Surgery. She develops protocols to strengthen their hands and facilitate sensory recovery, using desensitizing techniques if needed. She also fashions thermoplastic splints when needed. She recommends equipment and orders it, for assisting in return to work if needed.'
     title: 'Ms. Karen N. Bird, MA OTRL'
   - id: dr-dusenbury
-    image: /assets/images/profile-placeholder-m.svg
+    image: /assets/images/kevin-duesenberg-dpt.jpg
     linkedin_link: ''
     specialty: Doctor of Physical Therapy
     text: >2-
