Update Team “team_members”

--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -2,7 +2,7 @@ home_title: Our team
 home_id: team
 member:
   - id: dr-green
-    image: /assets/images/profile-placeholder-m.svg
+    image: /assets/images/dsc_4430cropped1000px.jpg
     linkedin_link: 'https://www.linkedin.com/in/rodney-green-41276423/'
     specialty: Hand surgeon
     text: >2-
