Update Team “team_members”

--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -63,7 +63,7 @@ member:
 staff_title: Additional staff
 staff_id: staff
 staff:
-  - image: /assets/images/profile-placeholder-f.svg
+  - image: /assets/images/kim.jpg
     specialty: Office Manager
     title: Kimberley Lucas
   - image: /assets/images/profile-placeholder-f.svg
