Update Team “team_members”

--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -69,4 +69,4 @@ staff:
   - image: /assets/images/profile-placeholder-f.svg
     linkedin_link: ''
     specialty: Patient Coordinator
-    title: Roxanne Bennicci
+    title: Roxanne Bennici
