Update Team “team_members”

--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -66,7 +66,7 @@ staff:
   - image: /assets/images/kim.jpg
     specialty: Office Manager
     title: Kimberley Lucas
-  - image: /assets/images/profile-placeholder-f.svg
+  - image: /assets/images/roxanne-.jpg
     linkedin_link: ''
     specialty: Patient Coordinator
     title: Roxanne Bennici
