--- a/themes/carpal-tunnel/data/about.yml
+++ b/themes/carpal-tunnel/data/about.yml
@@ -1,6 +1,6 @@
 about_text:
   id: about
-  photo: assets/images/dr_green.jpg
+  photo: /assets/images/dsc_4430cropped1000px.jpg
   text: >2-
      Over the past thirty years, Dr. Green has practiced in the greater Cleveland area, after specialty training at the Cleveland Clinic Foundation. He is a Board-Certified Plastic Surgeon with additional Certification in Hand Surgery, through the American Board of Plastic Surgery.
 
@@ -14,26 +14,27 @@ about_text:
     The Carpal Tunnel Center has been recently established in Dr. Green’s
     Plastic Surgery offices to make the process of treating patients with Carpal
     Tunnel Syndrome more efficient and more available to those that need it.
-  title:  Founder and director  \
-
-          Dr. Rodney Green, M.D. FACS
+  title: |-
+    Founder and director  \
+    Dr. Rodney Green, M.D. FACS
 clinic:
   clinic_image: assets/images/clinic-image.jpg
   clinic_title: Our Clinic
   id: clinic
 process:
   - icon: /assets/images/consult.svg
-    text: Consultation with Dr. Green at his office or by videoconference.  \
-
-          (We also offer initial screening at our satellite office in Lakewood NJ.)
+    text: |-
+      Consultation with Dr. Green at his office or by videoconference.  \
+      (We also offer initial screening at our satellite office in Lakewood NJ.)
   - icon: /assets/images/arrangement.svg
     text: >-
-          Arrangement at the same location, for electrical testing to confirm the diagnosis and establish objective baseline.
+      Arrangement at the same location, for electrical testing to confirm the
+      diagnosis and establish objective baseline.
   - icon: assets/images/treatment.svg
     text: >-
-          Surgical treatment with the single port endoscopic technique at our Ohio
-          State licensed Surgery Center also located at the same location.
+      Surgical treatment with the single port endoscopic technique at our Ohio
+      State licensed Surgery Center also located at the same location.
   - icon: assets/images/follow-up_2.svg
     text: >-
-          Postop follow-up at the same location with hand therapy provided by our
-          licensed Occupational Therapist, also at the same location.
+      Postop follow-up at the same location with hand therapy provided by our
+      licensed Occupational Therapist, also at the same location.
