Update General “general_info”

--- a/config.yml
+++ b/config.yml
@@ -26,6 +26,6 @@ params:
     The Carpal Tunnel Center specializes in single-port endoscopic carpal tunnel
     release. Personalized care by our team of experts ensures that you are in
     good hands.
-  googleAnalitycsID: Your ID
+  googleAnalitycsID: UA-426069-3
   images: /assets/images/carpal-tunnel-center.jpg
   logo: assets/images/logo.svg
