Update About “about_info”

--- a/themes/carpal-tunnel/data/about.yml
+++ b/themes/carpal-tunnel/data/about.yml
@@ -1,6 +1,6 @@
 about_text:
   id: about
-  photo: /assets/images/dsc_4430cropped1000px.jpg
+  photo: /assets/images/ohio-carpal-tunnel-center.png
   text: >-2
      Over the past thirty years, Dr. Green has practiced in the greater Cleveland area, after specialty training at the Cleveland Clinic Foundation. He is a Board-Certified Plastic Surgeon with additional Certification in Hand Surgery, through the American Board of Plastic Surgery.
 
