Update About “about_info”

--- a/themes/carpal-tunnel/data/about.yml
+++ b/themes/carpal-tunnel/data/about.yml
@@ -9,7 +9,7 @@ about_text:
 
     The Carpal Tunnel Center has been recently established in Dr. Green’s Plastic Surgery offices to make the process of treating patients with Carpal Tunnel Syndrome more efficient and more available to those that need it.
   title: |-
-    Founder and director  \
+    Founder and Director  \
     Dr. Rodney Green, M.D. FACS
 clinic:
   clinic_image: /assets/images/ohio-carpal-tunnel-center.png
