Update About “about_info”

--- a/themes/carpal-tunnel/data/about.yml
+++ b/themes/carpal-tunnel/data/about.yml
@@ -12,7 +12,7 @@ about_text:
     Founder and Director  \
     Dr. Rodney Green, M.D. FACS
 clinic:
-  clinic_image: /assets/images/ohio-carpal-tunnel-center.png
+  clinic_image: /assets/images/ohio-carpal-tunnel-center.jpg
   clinic_title: Ohio Carpal Tunnel Center
   id: center
 process:
